k8s/ingress_controller.yaml
##########################
# Ingress Controller
###########################
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
spec:
  type: LoadBalancer
  selector:
    component: ingress
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
